[project]
name = "activitytoolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tsadoq", email = "github.v5331@passmail.net" }
]
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
